workspace-sf/force-app/main/default/objects/CoCorretagem__c/CoCorretagem__c.object-meta.xml
<CustomObject>
    <label>Cadastro de Co-Corretagem</label>
    <nameField>
        <label>Nome Co-Corretagem</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadastro de Co-Corretagem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>