workspace-sf/force-app/main/default/objects/CoCorretagem__c/fields/PercentualCoCorretagem__c.field-meta.xml
<CustomField>
    <fullName>PercentualCoCorretagem__c</fullName>
    <label>Percentual Co-Corretagem</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>