workspace-sf/force-app/main/default/objects/CoCorretagem__c/fields/PercentualTransmissao__c.field-meta.xml
<CustomField>
    <fullName>PercentualTransmissao__c</fullName>
    <label>Percentual Transmissão</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>