workspace-sf/force-app/main/default/objects/CoCorretagem__c/fields/SusepDeCoCorretagem__c.field-meta.xml
<CustomField>
    <fullName>SusepDeCoCorretagem__c</fullName>
    <label>Susep Co-Corretagem</label>
    <length>80</length>
    <type>Text</type>
</CustomField>