workspace-sf/force-app/main/default/objects/CoCorretagem__c/fields/SusepDeCoCorretagemLider__c.field-meta.xml
<CustomField>
    <fullName>SusepDeCoCorretagemLider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Susep Co-Corretagem Lider</label>
    <type>Checkbox</type>
</CustomField>