workspace-sf/force-app/main/default/objects/CoCorretagem__c/fields/SusepTransmissao__c.field-meta.xml
<CustomField>
    <fullName>SusepTransmissao__c</fullName>
    <externalId>true</externalId>
    <label>Susep Transmissão</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>