workspace-sf/force-app/main/default/objects/CoCorretagem__c/fields/SusepTransmissaoLider__c.field-meta.xml
<CustomField>
    <fullName>SusepTransmissaoLider__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Susep Transmissão Lider</label>
    <type>Checkbox</type>
</CustomField>