workspace-sf/force-app/main/default/objects/CoCorretagem__c/recordTypes/CoCorretagem.recordType-meta.xml
<RecordType>
    <fullName>CoCorretagem</fullName>
    <active>true</active>
    <label>Co-corretagem</label>
</RecordType>