workspace-sf/force-app/main/default/objects/CoCorretagem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SusepTransmissaoLider__c</columns>
    <columns>SusepTransmissao__c</columns>
    <columns>PercentualTransmissao__c</columns>
    <columns>SusepDeCoCorretagemLider__c</columns>
    <columns>SusepDeCoCorretagem__c</columns>
    <columns>PercentualCoCorretagem__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>